# SAFU_bot

./: CMakeLists.txt
db/: Create_DB.sql
src/: main.cpp
src/MessageProccesing/: blockCreate.cpp  blockCreate.h  blockView.cpp  blockView.h  message.h  messageTypeParser.cpp  messageTypeParser.h
src/Reminder/: desktop.ini  reminder.h  timeProcessor.cpp  timeProcessor.h
src/blockprocessing/: blockCreate.cpp  blockCreate.h  blockView.cpp  team.cpp  team.h  teamCreate.cpp  teamCreate.h
src/cBot/: cBot.cpp  cBot.h  pch.h
src/messageprocessing/: messageTypeParser.cpp
